<resources>
    <string name="app_name">ChargeEt</string>
    <!--    -->
    <!--    AIzaSyCBZ1E4AGu6xP_VV4GWr_qjnOte9sFmh0A-->
    <string name="Google_Map_API_Key">AIzaSyCBZ1E4AGu6xP_VV4GWr_qjnOte9sFmh0A</string>
    <!--    getStarted-->

    <string name="charge">Charge-et</string>
    <string name="easy_to_use">Easy To Use</string>
    <string name="Get_Started">Get Started</string>
    <string name="next">Next</string>

    <!--    welcome-->
    <string name="Join_in_with_Facebook">Join in with Facebook</string>
    <string name="Join_in_with_Google">Join in with Google</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>

    <!--    signUp-->


    <string name="Email">Email</string>
    <string name="Enter_Email">Enter Email</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="Enter_Phone_Number">Enter Phone Number</string>
    <string name="Username">Username</string>
    <string name="Enter_Username">Enter Username</string>
    <string name="Password">Password</string>
    <string name="Enter_Password">Enter Password</string>
    <string name="Country">Country</string>
    <string name="Select_Country">Select Country</string>
    <string name="login">Login</string>

    <!--    login-->
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Secured_Login">Secured Login</string>

    <!--    forgot_password-->
    <string name="Forgot_Pwd">Forgot Password</string>
    <string name="POPUP">POPUP</string>
    <string name="Continue">Continue</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend">Resend</string>
    <string name="otp_msg">An OTP has been sent to your registered mobile number &amp; Email-id.</string>

    <!--    account-->
    <string name="Your_Personal_Information">Your Personal Information</string>
    <string name="Account_Information">Account Information</string>
    <string name="Personal_Information">Personal Information</string>
    <string name="Username_">Username :</string>
    <string name="Email_">Email :</string>
    <string name="Mobile_Number_">Mobile Number :</string>
    <string name="Name_">Name :</string>
    <string name="Surname_">Surname :</string>
    <string name="Surname">Surname</string>
    <string name="Gender_">Gender :</string>
    <string name="Gender">Gender</string>

    <string name="Town_">Town :</string>
    <string name="Town">Town</string>
    <string name="Country_">Country :</string>
    <string name="DOB_">DOB :</string>
    <string name="Description_">Description :</string>
    <string name="Description">Description</string>
    <string name="update">Update</string>

    <!--    wallet-->

    <string name="Available_Balance">Available Balance</string>
    <string name="Add_Money">Add Money</string>
    <string name="Withdraw">Withdraw</string>
    <string name="wallet">Wallet</string>

    <!--    filter-->
    <string name="Power_Levels">Power Levels</string>
    <string name="Connectors">Connectors</string>
    <string name="Pin">3-Pin</string>
    <string name="Type">Type 2</string>
    <string name="Type_">Type 2 ( cable attached )</string>
    <string name="combo_ccs_EU">combo ccs EU</string>
    <string name="CHAdeMO">CHAdeMO</string>
    <string name="GB_T">GB/T</string>
    <string name="Tesla">Tesla</string>
    <string name="Tesla_Supercharger_CCS">Tesla Supercharger CCS</string>
    <string name="Free_Station">Free Station</string>
    <string name="Working_Station">24/7 Working Station</string>
    <string name="Apply_Filter">Apply Filter</string>
    <string name="Available">Available</string>
    <string name="Not_Available">Not Available</string>
    <string name="Estimated_Price">Estimated Price</string>
    <string name="Session_Time">Session Time</string>
    <string name="Vehicle_Range_increase_from_session">Vehicle Range increase from session</string>
    <string name="Percentage">Percentage</string>
    <string name="Units">Units</string>
    <string name="Time">Time</string>
    <string name="Enter_percentage">Enter percentage</string>


    <!--    my vehicle-->

    <string name="Your_Vehicles">Your Vehicles</string>
    <string name="Primary_Vehicles">Primary Vehicles</string>
    <string name="Other_Vehicles">Other Vehicles</string>
    <string name="EV_Models">EV Models</string>
    <string name="Search_Vehicle">Search Vehicle</string>

    <!--    booking-->
    <string name="Scan_QR_Code">Scan QR Code</string>
    <string name="Schedule_charging">Schedule charging</string>
    <string name="Pay_for_Charging">Pay for Charging</string>


    <!--    home-->

    <string name="Book_Now">Book Now</string>
    <string name="Navigate_Location">Navigate to Location</string>
    <!--    <string name="CHAdeMO">CHAdeMO</string>-->
    <string name="Google_Pay">Google Pay</string>
    <string name="Amazon_Pay">Amazon Pay</string>
    <string name="Debit_Credit_Cards">Debit/ Credit Cards</string>

</resources>