<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_18sdp"
        android:orientation="vertical">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_outline_account_balance_wallet_24"
                android:drawablePadding="@dimen/_30sdp"
                android:layoutDirection="rtl"
                android:text="@string/Google_Pay" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_text_color" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_outline_account_balance_wallet_24"
                android:drawablePadding="@dimen/_30sdp"
                android:layoutDirection="rtl"
                android:text="@string/Amazon_Pay" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_text_color" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_outline_account_balance_wallet_24"
                android:drawablePadding="@dimen/_30sdp"
                android:layoutDirection="rtl"
                android:text="@string/wallet" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/black_text_color" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_outline_account_balance_wallet_24"
                android:drawablePadding="@dimen/_30sdp"
                android:layoutDirection="rtl"
                android:text="@string/Debit_Credit_Cards" />


        </RadioGroup>

    </LinearLayout>


</RelativeLayout>