<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".Activity.EditProfileActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />


    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_16sdp">


            <ImageView
                android:id="@+id/person"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person" />

            <TextView
                style="@style/play_semi_black_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_12sdp"
                android:layout_toEndOf="@+id/person"
                android:text="@string/Your_Personal_Information" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@drawable/line_bg"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_14sdp"
                android:layout_marginRight="@dimen/_14sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/mont_semi_black_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Email" />

                    <EditText
                        style="@style/mont_reg_black_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableLeft="@drawable/ic_outline_email_24"
                        android:drawablePadding="@dimen/_12sdp"
                        android:ellipsize="end"
                        android:hint="@string/Enter_Email"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/mont_semi_black_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Phone_Number" />

                    <EditText
                        style="@style/mont_reg_black_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableLeft="@drawable/ic_outline_phone_24"
                        android:drawablePadding="@dimen/_12sdp"
                        android:ellipsize="end"
                        android:hint="@string/Enter_Phone_Number"
                        android:maxLines="1"
                        android:singleLine="true" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/mont_semi_black_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Username" />

                    <EditText
                        style="@style/mont_reg_black_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableLeft="@drawable/ic_outline_email_24"
                        android:drawablePadding="@dimen/_12sdp"
                        android:ellipsize="end"
                        android:hint="@string/Enter_Username"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/mont_semi_black_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Surname" />

                    <EditText
                        style="@style/mont_reg_black_14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:drawableLeft="@drawable/ic_outline_email_24"
                        android:drawablePadding="@dimen/_12sdp"
                        android:ellipsize="end"
                        android:hint="@string/Enter_Username"
                        android:maxLines="1"
                        android:singleLine="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnSignUp"
                        style="@style/button_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:backgroundTint="@color/blue_10"
                        android:text="@string/update" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>