<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    tools:context=".Activity.SignInActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/undraw_nature"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_80sdp"
        />


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">


            <RelativeLayout
                android:id="@+id/pagerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/get_start_bg"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_14sdp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/playfair_display_semi_bold"
                            android:gravity="center"
                            android:text="@string/Secured_Login"
                            android:textColor="@color/black_text_color"
                            android:textSize="@dimen/_40sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/mont_semi_black_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Email" />

                        <EditText
                            android:id="@+id/edtEmail"
                            style="@style/mont_reg_black_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:drawableLeft="@drawable/ic_outline_email_24"
                            android:drawablePadding="@dimen/_12sdp"
                            android:ellipsize="end"
                            android:hint="@string/Enter_Email"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:orientation="vertical">

                        <TextView
                            style="@style/mont_semi_black_14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Password" />

                        <EditText
                            android:id="@+id/edtPassword"
                            style="@style/mont_reg_black_14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            android:drawableLeft="@drawable/ic_outline_vpn_key_24"
                            android:drawablePadding="@dimen/_12sdp"
                            android:ellipsize="end"
                            android:hint="@string/Enter_Password"
                            android:maxLines="1"
                            android:singleLine="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnLogin"
                            style="@style/button_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_16sdp"
                            android:layout_marginBottom="@dimen/_16sdp"
                            android:text="@string/login" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_16sdp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/forgotPassword"
                            style="@style/mont_semi_black_12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/Forgot_Password" />

                        <TextView
                            android:id="@+id/signUp"
                            style="@style/mont_semi_black_12"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/Sign_Up" />

                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>