<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".Activity.SignUpActivity">

    <RelativeLayout
        android:id="@+id/pagerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_200sdp"
        android:background="@drawable/get_start_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_14sdp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/playfair_display_semi_bold"
                    android:gravity="center"
                    android:text="@string/Sign_Up"
                    android:textColor="@color/black_text_color"
                    android:textSize="@dimen/_40sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/mont_semi_black_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email" />

                <EditText
                    style="@style/mont_reg_black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:drawableLeft="@drawable/ic_outline_email_24"
                    android:drawablePadding="@dimen/_12sdp"
                    android:ellipsize="end"
                    android:hint="@string/Enter_Email"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/mont_semi_black_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Phone_Number" />

                <EditText
                    style="@style/mont_reg_black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:drawableLeft="@drawable/ic_outline_phone_24"
                    android:drawablePadding="@dimen/_12sdp"
                    android:ellipsize="end"
                    android:hint="@string/Enter_Phone_Number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/mont_semi_black_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Username" />

                <EditText
                    style="@style/mont_reg_black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:drawableLeft="@drawable/ic_outline_email_24"
                    android:drawablePadding="@dimen/_12sdp"
                    android:ellipsize="end"
                    android:hint="@string/Enter_Username"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/mont_semi_black_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email" />

                <EditText
                    style="@style/mont_reg_black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:drawableLeft="@drawable/ic_outline_email_24"
                    android:drawablePadding="@dimen/_12sdp"
                    android:ellipsize="end"
                    android:hint="@string/Enter_Email"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:orientation="vertical">

                <TextView
                    style="@style/mont_semi_black_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Email" />

                <EditText
                    style="@style/mont_reg_black_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:drawableLeft="@drawable/ic_outline_email_24"
                    android:drawablePadding="@dimen/_12sdp"
                    android:ellipsize="end"
                    android:hint="@string/Enter_Email"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>